cmake_minimum_required(VERSION 3.7)
set(COBOTSYS_DEPENDED_MODULES Cow.CobotStudio.FrameWork Puppy.Common Sensor.RobotDirver.Common Cow.CobotStudio.Common)
set(COBOTSYS_DEPENDED_3RD_MODULES rttr ompl pcl boost vtk opencv lapack Qt5::Widgets Qt5::Core Qt5::Gui Qt5::Widgets Qt5::Qml orocos_kdl)
#add_definitions(-DVTK_SENCE)
include_directories(src/rws/vtksence)
find_package(VTK REQUIRED)
include(${VTK_USE_FILE})
set(_qt5Core_install_prefix $ENV{SDK_PATH}/install/x86-64-install/oss/3rdparty/qt/)
include_directories(src/rws src/rws/propertyview src/rws/qtpropertybrowser/src src/rws/qtpropertybrowser)
include($ENV{SDK_PATH}/Tiger/Tiger.Make/cmake/template/qt.template.cmake)
include($ENV{SDK_PATH}/Tiger/Tiger.Make/cmake/template/test.template.cmake)